--- a/PCL.ipynb
+++ b/PCL.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import open3d\n",
@@ -42,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -60,13 +50,13 @@
      "output_type": "stream",
      "text": [
       "45785\n",
-      "24922\n"
+      "10600\n"
      ]
     }
    ],
    "source": [
     "###Downsampling\n",
-    "downsample_pcd = pcd.voxel_down_sample(voxel_size = 0.2)\n",
+    "downsample_pcd = pcd.voxel_down_sample(voxel_size = 0.6)\n",
     "open3d.visualization.draw_geometries([downsample_pcd])\n",
     "print(len(pcd.points))\n",
     "print(len(downsample_pcd.points))"
@@ -74,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,74 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = np.array(outlier_cloud.cluster_dbscan(eps=0.55, min_points=10, print_progress=True))\n",
-    "max_label = labels.max()\n",
-    "colors = plt.get_cmap(\"tab20\")(labels/(max_label if max_label >0 else 1))\n",
-    "\n",
-    "colors[labels<0] = 0\n",
-    "outlier_cloud.colors = open3d.utility.Vector3dVector(colors[:,:3])\n",
-    "open3d.visualization.draw_geometries([outlier_cloud])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(12315,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(labels.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Max_points=1000\n",
-    "Min_points=20\n",
-    "clusters = []\n",
-    "obbs=[]\n",
-    "indexes = pd.Series(range(len(labels))).groupby(labels,sort = False).apply(list).tolist()\n",
-    "for i in range(0,len(indexes)):\n",
-    "    nb_pts = len(outlier_cloud.select_by_index(indexes[i]).points)\n",
-    "    if nb_pts>Min_points:\n",
-    "        \n",
-    "        sub_cloud = outlier_cloud.select_by_index(indexes[i])\n",
-    "        obb = sub_cloud.get_axis_aligned_bounding_box()\n",
-    "        obb.color = (0,0,1)\n",
-    "        obbs.append(obb)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_of_visuals = []\n",
-    "list_of_visuals.append(outlier_cloud)\n",
-    "list_of_visuals.extend(obbs)\n",
-    "list_of_visuals.append(inlier_cloud)\n",
-    "open3d.visualization.draw_geometries(list_of_visuals)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,21 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_34296/3931503331.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mstart\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcluster\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msimple_DBSCAN\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcluster\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0meps\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.9\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminPts\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start = datetime.datetime.now()\n",
     "cluster = [0]*data.shape[0]\n",
@@ -245,16 +156,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to perform clustering: 0:00:06.082052\n"
+     ]
+    }
+   ],
    "source": [
     "print('Time to perform clustering:', end-start)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,10 +223,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "def euclidean_distance(p1,p2):\n",
+    "    return np.sqrt(np.sum((p1-p2)**2))\n",
     "\n",
     "def get_neighbors(X,pt,epsilon):\n",
     "    neighbour=[]\n",
@@ -316,7 +238,81 @@
     "            neighbour.append(index)\n",
     "    return neighbour\n",
     "\n",
+    "\n",
+    "def expand(X, clusters, point, neighbors, currentPoint, eps, minPts):\n",
+    "    \n",
+    "    clusters[point] = currentPoint\n",
+    "    \n",
+    "    i = 0\n",
+    "    while i < len(neighbors):\n",
+    "        \n",
+    "        nextPoint = neighbors[i]\n",
+    "        \n",
+    "        if clusters[nextPoint] == -1:\n",
+    "            clusters[nextPoint] = currentPoint\n",
+    "        \n",
+    "        elif clusters[nextPoint] == 0:\n",
+    "            clusters[nextPoint] = currentPoint\n",
+    "            \n",
+    "            nextNeighbors = get_neighbors(X, nextPoint, eps)\n",
+    "            \n",
+    "            if len(nextNeighbors) >= minPts:\n",
+    "                neighbors = neighbors + nextNeighbors\n",
+    "        \n",
+    "        i += 1\n",
+    "    \n",
+    "\n",
+    "def simple_DBSCAN(X, clusters, eps, minPts):\n",
+    "    \n",
+    "    currentPoint = 0\n",
+    "    \n",
+    "    for i in range(0, X.shape[0]):\n",
+    "        print(i)\n",
+    "        if clusters[i] != 0:\n",
+    "            continue\n",
+    "    \n",
+    "        neighbors = get_neighbors(X, i, eps)\n",
+    "\n",
+    "        if len(neighbors) < minPts:\n",
+    "            clusters[i] = -1\n",
+    "\n",
+    "        else:\n",
+    "            currentPoint += 1\n",
+    "            expand(X, clusters, i, neighbors, currentPoint, eps, minPts)\n",
+    "    \n",
+    "    return clusters\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = datetime.datetime.now()\n",
+    "unpti_cluster = [0]*data.shape[0]\n",
+    "uc=simple_DBSCAN(data,unpti_cluster,eps=0.9, minPts=6)\n",
+    "end = datetime.datetime.now()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to perform clustering: -1 day, 23:45:14.550017\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Time to perform clustering:', end-start)"
    ]
   }
  ],
